--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Awesome Site</title>
+    <title>My GitHub Page</title>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page!</h1>
+    <h1>Welcome to My Website!</h1>
     <p>This is a simple page hosted with GitHub Pages.</p>
+    <p><a href="MyCV.pdf" target="_blank">Download My CV</a></p>
 </body>
 </html>
