--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome to My Website!</h1>
     <p>This is a simple page hosted with GitHub Pages.</p>
-    <p><a href="MyCV.pdf" target="_blank">Download My CV</a></p>
+    <p><a href="CV.pdf" target="_blank">Download My CV</a></p>
 </body>
 </html>
