--- a/index.html
+++ b/index.html
@@ -3,11 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Asher Baraban</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .nav {
+            background-color: #fff;
+            padding: 10px;
+            text-align: right;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #007bff;
+            font-weight: bold;
+        }
+        .nav a:hover {
+            text-decoration: underline;
+        }
+        .container {
+            margin: 40px auto;
+            max-width: 800px;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            align-items: flex-start;
+        }
+        img {
+            border-radius: 50%;
+            margin-right: 20px;
+            width: 120px;
+        }
+        .content {
+            max-width: 600px;
+        }
+        h1 {
+            margin: 0;
+            font-size: 28px;
+            color: #555;
+        }
+        p {
+            margin: 10px 0;
+            line-height: 1.6;
+        }
+        .cv-link {
+            color: #007bff;
+            text-decoration: none;
+            margin-top: 10px;
+            display: inline-block;
+        }
+        .cv-link:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is a simple page hosted with GitHub Pages.</p>
-    <p><a href="CV.pdf" target="_blank">Download My CV</a></p>
+    <div class="nav">
+        <a href="#cv">CV</a>
+        <a href="#research">Research</a>
+        <a href="#projects">Projects</a>
+    </div>
+    <div class="container">
+        <img src="profile.jpg" alt="Profile Picture">
+        <div class="content">
+            <h1>Asher Baraban</h1>
+            <p>I'm currently a Pre-Doctoral Research Fellow at Opportunity Insights at Harvard University, working on the relationship between credit markets and upward mobility.</p>
+            <p>I graduated summa cum laude from Washington University in St. Louis with a B.S. in Computer Science + Mathematics and an M.S. in Data Analytics and Statistics.</p>
+            <a class="cv-link" href="CV.pdf" target="_blank">Download My CV</a>
+        </div>
+    </div>
 </body>
 </html>
