--- a/index.html
+++ b/index.html
@@ -71,12 +71,11 @@
         <a href="#projects">Projects</a>
     </div>
     <div class="container">
-        <img src="profile.jpg" alt="Profile Picture">
+        <img src="profile.png" alt="Profile Picture">
         <div class="content">
             <h1>Asher Baraban</h1>
             <p>I'm currently a Pre-Doctoral Research Fellow at Opportunity Insights at Harvard University, working on the relationship between credit markets and upward mobility.</p>
             <p>I graduated summa cum laude from Washington University in St. Louis with a B.S. in Computer Science + Mathematics and an M.S. in Data Analytics and Statistics.</p>
-            <a class="cv-link" href="CV.pdf" target="_blank">Download My CV</a>
         </div>
     </div>
 </body>
