--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div class="nav">
-        <a href="#cv">CV</a>
+        <a href="CV.pdf" target="_blank">CV</a>
         <a href="#research">Research</a>
         <a href="#projects">Projects</a>
     </div>
