--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 <body>
     <div class="nav">
         <a href="CV.pdf" target="_blank">CV</a>
-        <a href="#research">Research</a>
-        <a href="#projects">Projects</a>
+        <a href="research.html">Research</a>
     </div>
     <div class="container">
         <img src="profile.png" alt="Profile Picture">
