--- a/research.html
+++ b/research.html
@@ -96,7 +96,7 @@
     </div>
     <div class="container">
         <div class="profile">
-            <img src="profile.jpg" alt="Profile Picture">
+            <img src="profile.png" alt="Profile Picture">
             <h2>Asher Baraban</h2>
             <p>Pre-Doctoral Research Fellow<br>in Economics</p>
             <a href="mailto:asher.baraban@gmail.com">✉ Email</a>
