--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             font-size: 18px;
             line-height: 1.6;
         }
+        .profile-pic {
+            border-radius: 50%;
+            width: 150px;
+            height: auto;
+            max-width: 100%;
+        }
         .nav {
             display: flex;
             justify-content: flex-end;
