--- a/research.html
+++ b/research.html
@@ -36,10 +36,11 @@
             text-align: center;
             padding-right: 20px;
         }
-        .profile img {
+        .profile-pic {
             border-radius: 50%;
-            width: 120px;
-            height: 120px;
+            width: 150px;
+            height: auto;
+            max-width: 100%;
         }
         .profile h2 {
             font-size: 18px;
