--- a/index.html
+++ b/index.html
@@ -4,75 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asher Baraban</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-        .nav {
-            background-color: #333;
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-            padding: 15px 30px;
-        }
-        .nav a {
-            margin-left: 20px;
-            text-decoration: none;
-            color: #fff;
-            font-weight: bold;
-        }
-        .nav a:hover {
-            text-decoration: underline;
-        }
-        .container {
-            display: flex;
-            align-items: center;
-            max-width: 1200px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-        .content {
-            max-width: 600px;
-            margin-left: 40px;
-        }
-        .content h1 {
-            font-size: 28px;
-            margin-bottom: 20px;
-        }
-        .content p {
-            line-height: 1.6;
-        }
-        .profile-pic {
-            border-radius: 50%;
-            width: 150px;
-            height: auto;
-            max-width: 100%;
-        }
-        .contact-info {
-            margin-top: 10px;
-            line-height: 1.4;
-        }
-        .contact-info a {
-            color: #333;
-            text-decoration: none;
-        }
-        .contact-info a:hover {
-            text-decoration: underline;
-        }
-        .footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: #fff;
-            box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.1);
-            margin-top: 40px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
