--- a/research.html
+++ b/research.html
@@ -3,91 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-        }
-        .nav {
-            background-color: #fff;
-            padding: 10px;
-            text-align: right;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #007bff;
-            font-weight: bold;
-        }
-        .nav a:hover {
-            text-decoration: underline;
-        }
-        .container {
-            display: flex;
-            padding: 20px;
-            margin-top: 20px;
-        }
-        .profile {
-            width: 30%;
-            text-align: center;
-            padding-right: 20px;
-        }
-        .profile-pic {
-            border-radius: 50%;
-            width: 150px;
-            height: auto;
-            max-width: 100%;
-        }
-        .profile h2 {
-            font-size: 18px;
-            color: #333;
-            margin-top: 10px;
-        }
-        .profile p {
-            color: #666;
-            margin: 5px 0;
-        }
-        .profile a {
-            display: block;
-            margin: 5px 0;
-            color: #007bff;
-            text-decoration: none;
-        }
-        .content {
-            width: 70%;
-        }
-        .content h1 {
-            font-size: 24px;
-            color: #333;
-            margin-bottom: 20px;
-        }
-        .research-item {
-            margin-bottom: 20px;
-        }
-        .title {
-            font-size: 18px;
-            font-weight: bold;
-            color: #333;
-        }
-        .authors {
-            font-style: italic;
-            color: #666;
-        }
-        .publication {
-            color: #777;
-        }
-        .pdf-link {
-            color: #007bff;
-            text-decoration: none;
-        }
-        .pdf-link:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Page Title</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="nav">
