--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     </div>
 
     <div class="container">
-        <img src="profile.png" alt="Profile Picture" class="profile-pic">
-        <div class="content">
-            <h1>Asher Baraban</h1>
-            <p>I'm currently a Pre-Doctoral Research Fellow at Opportunity Insights at Harvard University, analyzing racial credit disparities and optimizing big data processing.</p>
-            <p>I graduated summa cum laude from Washington University in St. Louis with a B.S. in Computer Science and Mathematics and an M.S. in Data Analytics and Statistics.</p>
+        <div class="profile">
+            <img src="profile.png" alt="Profile Picture" class="profile-pic">
             <div class="contact-info">
                 <a href="mailto:asher.baraban@gmail.com">✉ asher.baraban@gmail.com</a><br>
                 <a href="https://github.com/ABaraban" target="_blank">GitHub: github.com/ABaraban</a>
             </div>
+        </div>
+        <div class="content">
+            <h1>Asher Baraban</h1>
+            <p>I'm currently a Pre-Doctoral Research Fellow at Opportunity Insights at Harvard University, analyzing racial credit disparities and optimizing big data processing.</p>
+            <p>I graduated summa cum laude from Washington University in St. Louis with a B.S. in Computer Science and Mathematics and an M.S. in Data Analytics and Statistics.</p>
         </div>
     </div>
 
