--- a/research.html
+++ b/research.html
@@ -14,11 +14,11 @@
     </div>
     <div class="container">
         <div class="profile">
-            <img src="profile.png" alt="Profile Picture">
-            <h2>Asher Baraban</h2>
-            <p>Pre-Doctoral Research Fellow<br>in Economics</p>
-            <a href="mailto:asher.baraban@gmail.com">✉ Email</a>
-            <a href="https://github.com/ABaraban" target="_blank">GitHub</a>
+            <img src="profile.png" alt="Profile Picture" class="profile-pic">
+            <div class="contact-info">
+                <a href="mailto:asher.baraban@gmail.com">✉ asher.baraban@gmail.com</a><br>
+                <a href="https://github.com/ABaraban" target="_blank">GitHub: github.com/ABaraban</a>
+            </div>
         </div>
         <div class="content">
             <h1>Research</h1>
