--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asher Baraban</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
@@ -19,14 +20,14 @@
         <div class="profile">
             <img src="profile.png" alt="Profile Picture" class="profile-pic">
             <div class="contact-info">
-                <a href="mailto:asher.baraban@gmail.com">✉ asher.baraban@gmail.com</a><br>
-                <a href="https://github.com/ABaraban" target="_blank">GitHub: github.com/ABaraban</a>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:asher.baraban@gmail.com">asher.baraban@gmail.com</a></p>
+                <p><i class="fab fa-github"></i> <a href="https://github.com/ABaraban" target="_blank">github.com/ABaraban</a></p>
             </div>
         </div>
         <div class="content">
             <h1>Asher Baraban</h1>
-            <p>I'm currently a Pre-Doctoral Research Fellow at Opportunity Insights at Harvard University, analyzing racial credit disparities and optimizing big data processing.</p>
-            <p>I graduated summa cum laude from Washington University in St. Louis with a B.S. in Computer Science and Mathematics and an M.S. in Data Analytics and Statistics.</p>
+            <p>I'm currently a Pre-Doctoral Research Fellow at Opportunity Insights at Harvard University, analyzing the role of credit markets in economic opportunity.</p>
+            <p>I graduated summa cum laude from Washington University in St. Louis with a B.S. in Computer Science + Mathematics and an M.S. in Data Analytics and Statistics.</p>
         </div>
     </div>
 
