--- a/research.html
+++ b/research.html
@@ -16,8 +16,8 @@
         <div class="profile">
             <img src="profile.png" alt="Profile Picture" class="profile-pic">
             <div class="contact-info">
-                <a href="mailto:asher.baraban@gmail.com">✉ asher.baraban@gmail.com</a><br>
-                <a href="https://github.com/ABaraban" target="_blank">GitHub: github.com/ABaraban</a>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:asher.baraban@gmail.com">asher.baraban@gmail.com</a></p>
+                <p><i class="fab fa-github"></i> <a href="https://github.com/ABaraban" target="_blank">github.com/ABaraban</a></p>
             </div>
         </div>
         <div class="content">
