--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="profile">
             <img src="profile.png" alt="Profile Picture" class="profile-pic">
             <div class="contact-info">
-                <p><i class="fas fa-envelope"></i> <a href="mailto:asher.baraban@gmail.com">asher.baraban@gmail.com</a></p>
-                <p><i class="fab fa-github"></i> <a href="https://github.com/ABaraban" target="_blank">github.com/ABaraban</a></p>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:asher.baraban@gmail.com">Email</a></p>
+                <p><i class="fab fa-github"></i> <a href="https://github.com/ABaraban" target="_blank">Github</a></p>
             </div>
         </div>
         <div class="content">
