--- a/research.html
+++ b/research.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="nav">
-        <a href="index.html">Home</a>
+        <div style="flex-grow: 1; color: #fff;">
+            <a href="index.html" style="color: inherit; text-decoration: none;">Asher Baraban</a>
+        </div>
         <a href="CV.pdf" target="_blank">CV</a>
         <a href="research.html">Research</a>
     </div>
