--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
     <div class="nav">
-        <div style="flex-grow: 1; color: #fff;">Asher Baraban</div>
+        <div style="flex-grow: 1; color: #fff;">
+            <a href="index.html" style="color: inherit; text-decoration: none;">Asher Baraban</a>
+        </div>
         <a href="CV.pdf" target="_blank">CV</a>
         <a href="research.html">Research</a>
     </div>
