--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div style="flex-grow: 1; color: #fff;">
             <a href="index.html" style="color: inherit; text-decoration: none;">Asher Baraban</a>
         </div>
-        <a href="CV.pdf" target="_blank">CV</a>
-        <a href="research.html">Research</a>
+        <a href="CV.pdf" style="color: inherit; text-decoration: none;" target="_blank">CV</a>
+        <a href="research.html" style="color: inherit; text-decoration: none;" >Research</a>
     </div>
 
     <div class="container">
