--- a/research.html
+++ b/research.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-     <div class="nav">
+    <div class="nav">
         <div style="flex-grow: 1; color: #fff;">
             <a href="index.html" style="color: inherit; text-decoration: none;">Asher Baraban</a>
         </div>
-        <a href="CV.pdf" style="color: inherit; text-decoration: none;" target="_blank">CV</a>
-        <a href="research.html" style="color: inherit; text-decoration: none;" >Research</a>
+        <div style="flex-grow: 1; color: #fff;">
+            <a href="CV.pdf" style="color: inherit; text-decoration: none;">CV</a>
+        </div>
+        <div style="flex-grow: 1; color: #fff;">
+            <a href="research.html" style="color: inherit; text-decoration: none;">Research</a>
+        </div>
     </div>
     <div class="container">
         <div class="profile">
