--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 </head>
 <body>
 
-    <div class="nav">
+  <div class="nav">
         <div style="flex-grow: 1; color: #fff;">
             <a href="index.html" style="color: inherit; text-decoration: none;">Asher Baraban</a>
         </div>
-        <div style="flex-grow: 1; color: #fff;">
-            <a href="CV.pdf" style="color: inherit; text-decoration: none;">CV</a>
-        </div>
-        <div style="flex-grow: 1; color: #fff;">
-            <a href="research.html" style="color: inherit; text-decoration: none;">Research</a>
+        <div style="color: #fff;">
+            <a href="CV.pdf" style="color: inherit; text-decoration: none; margin-left: 20px;">CV</a>
+            <a href="research.html" style="color: inherit; text-decoration: none; margin-left: 20px;">Research</a>
         </div>
     </div>
 
