--- a/roth-vs-traditional.html
+++ b/roth-vs-traditional.html
@@ -31,72 +31,62 @@
             <hr>
 
             <p>
-                A common question for people saving for retirement is whether to contribute to a <b>Roth IRA</b> (post-tax) or a <b>Traditional IRA</b> (pre-tax). 
-                At its core, this choice is a bet on what your <b>tax rate will be now vs. in retirement</b>.
+                Should you use a <b>Roth IRA</b> (post-tax) or a <b>Traditional IRA</b> (pre-tax) for retirement? At its core, this choice is a bet on whether your <b>tax rate will be higher or lower in retirement</b> than it is now.
             </p>
 
             <h2>The Essential Tradeoff</h2>
             <p>
-                With a <b>Traditional IRA</b>, you deduct your contribution from your income today, reducing current taxes. Your investments grow tax-deferred. When you withdraw, you pay income tax on both contributions and earnings.
-            </p>
-            <p>
-                With a <b>Roth IRA</b>, you contribute money you've already paid taxes on. Your investments grow tax-free, and qualified withdrawals are completely tax-free in retirement.
+                A <b>Traditional IRA</b> lets you deduct your contribution today, lowering your current taxes. Your investments grow tax-deferred, and you pay income tax when you withdraw in retirement.<br>
+                A <b>Roth IRA</b> is funded with money after you’ve already paid taxes. Your investments grow tax-free, and withdrawals in retirement are completely tax-free.
             </p>
 
             <h2>The Tax Equation</h2>
             <p>
-                Suppose you can contribute $C$ dollars now. Let's compare what you'll have to spend in retirement from each account, ignoring investment limits:
+                Suppose you contribute an initial amount <b>C</b>, earning an annual return <b>r</b> for <b>n</b> years. Let:
             </p>
             <ul>
-                <li>Let $T_0$ = your marginal tax rate today</li>
-                <li>Let $T_1$ = your marginal tax rate at withdrawal (retirement)</li>
-                <li>Let $r$ = investment rate of return, $n$ = years until withdrawal</li>
+                <li><b>T<sub>0</sub></b> = your marginal tax rate today</li>
+                <li><b>T<sub>1</sub></b> = your marginal tax rate at withdrawal (retirement)</li>
+                <li><b>r</b> = investment rate of return</li>
+                <li><b>n</b> = years until withdrawal</li>
             </ul>
-            <p>
-                <b>Traditional IRA:</b><br>
-                You contribute <i>pre-tax</i> dollars. The account grows to $C(1 + r)^n$. On withdrawal, you pay taxes:
-            </p>
+
+            <p><b>Traditional IRA:</b> After-tax withdrawal:</p>
             <div style="margin-left: 2em;">
-                After-tax amount: \( C(1 + r)^n \times (1 - T_1) \)
+                \[
+                \text{After-tax amount} = C(1 + r)^n \times (1 - T_1)
+                \]
             </div>
-            <p>
-                <b>Roth IRA:</b><br>
-                You pay taxes upfront, so the initial contribution is smaller:
-            </p>
+            <p><b>Roth IRA:</b> After-tax withdrawal:</p>
             <div style="margin-left: 2em;">
-                After-tax dollars to invest: \( C \times (1 - T_0) \) <br>
-                Account grows to: \( C(1 - T_0) \times (1 + r)^n \)
+                \[
+                \text{After-tax amount} = C \times (1 - T_0) \times (1 + r)^n
+                \]
             </div>
 
             <h3>Which is better?</h3>
             <p>
-                The Roth and Traditional IRAs are <i>equivalent</i> <b>if and only if</b> your tax rate in retirement is the same as it is today ($T_0 = T_1$):
+                The two options are <i>economically equivalent</i> if and only if your tax rate is the same at contribution and withdrawal (<b>T<sub>0</sub></b> = <b>T<sub>1</sub></b>). So your decision is mainly this:
             </p>
-            <div style="margin-left: 2em;">
-                \( C(1 + r)^n (1 - T_1) = C(1 - T_0)(1 + r)^n \)<br>
-                So, the only thing that matters is whether \(T_1\) is greater or less than \(T_0\).
-            </div>
-            <p>
-                <ul>
-                    <li>If you expect your tax rate in retirement <b>to be higher</b> than today (\(T_1 > T_0\)), Roth is better.</li>
-                    <li>If you expect your tax rate <b>to drop</b> in retirement (\(T_1 &lt; T_0\)), Traditional is better.</li>
-                </ul>
-            </p>
+            <ul>
+                <li>If you expect your tax rate in retirement <b>to be higher</b> than today (<b>T<sub>1</sub></b> &gt; <b>T<sub>0</sub></b>), Roth is better.</li>
+                <li>If you expect your tax rate <b>to drop</b> in retirement (<b>T<sub>1</sub></b> &lt; <b>T<sub>0</sub></b>), Traditional is better.</li>
+            </ul>
 
             <h2>Other Considerations</h2>
             <ul>
-                <li>Required Minimum Distributions: Traditional accounts force you to withdraw at a certain age, Roth IRAs do not.</li>
-                <li>Contribution/income limits may affect your eligibility for either account type.</li>
-                <li>Roth IRAs offer flexibility (no tax on qualified withdrawals at any age), which can be beneficial if you need funds early.</li>
+                <li>Required Minimum Distributions: Traditional accounts force you to withdraw at a certain age; Roth IRAs do not.</li>
+                <li>Income and contribution limits may affect which accounts you're eligible for.</li>
+                <li>Roth IRAs offer withdrawal flexibility, which may be helpful if you need funds early.</li>
             </ul>
 
             <h2>Bottom Line</h2>
             <p>
-                Most of the time, the Roth vs. Traditional choice simply comes down to asking: <b>Do you expect to pay a higher or lower tax rate in retirement?</b> 
-                If you expect higher taxes later, the Roth is more attractive. If you expect lower taxes, Traditional is generally better.
+                For most people, the Roth vs. Traditional choice simply comes down to: <b>Do you expect to pay a higher or lower tax rate in retirement?</b> 
+                If you expect higher taxes later, the Roth is more attractive; if lower, Traditional is generally better.
             </p>
             <p>
-                Splitting contributions between both types can add flexibility if you're unsure. And as always, individual situations may vary—this framework helps clarify what's truly at stake!
+                Splitting contributions between both adds flexibility if you’re unsure. As always, individual situations vary—this framework clarifies the key point!
             </p>
         </div>
     </div>
