--- a/research.html
+++ b/research.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <div class="nav">
+    <div class="nav">
         <div style="flex-grow: 1; color: #fff;">
             <a href="index.html" style="color: inherit; text-decoration: none;">Asher Baraban</a>
         </div>
         <div style="color: #fff;">
             <a href="CV.pdf" style="color: inherit; text-decoration: none; margin-left: 20px;">CV</a>
             <a href="research.html" style="color: inherit; text-decoration: none; margin-left: 20px;">Research</a>
+            <a href="finance.html" style="color: #ffd700; text-decoration: none; margin-left: 20px;">Finance Thoughts</a>
         </div>
     </div>
     <div class="container">
